--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "setup-webhook": "tsx scripts/setup-webhook.ts",
     "delete-webhook": "tsx scripts/delete-webhook.ts",
     "test-sheets": "tsx scripts/test-sheets.ts",
+    "test-excel": "tsx scripts/test-excel.ts",
     "check-worksheets": "tsx scripts/check-worksheets.ts",
     "check-webhook": "tsx scripts/check-webhook-status.ts",
     "cleanup-transaktionen": "tsx scripts/cleanup-transaktionen.ts",
@@ -25,7 +26,6 @@
     "start-tunnel": "tsx scripts/start-all.ts",
     "watchdog": "tsx scripts/watchdog.ts",
     "auto-setup": "tsx scripts/auto-setup.ts",
-    "start": "node dist/index.js",
     "monitor-voice": "tsx scripts/monitor-voice.ts",
     "status": "tsx scripts/final-status-check.ts"
   },
@@ -38,7 +38,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@azure/identity": "^4.13.0",
     "@hono/node-server": "^1.12.0",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "dotenv": "^16.4.5",
     "googleapis": "^144.0.0",
     "grammy": "^1.38.3",
@@ -54,6 +56,7 @@
     "@typescript-eslint/parser": "^8.7.0",
     "@vitest/coverage-v8": "^2.1.8",
     "eslint": "^9.15.0",
+    "globals": "^17.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "vitest": "^2.1.8"
@@ -62,4 +65,3 @@
     "node": ">=20.0.0"
   }
 }
-
